...
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="yandex.com.mds.hw2.ColorPickerDialog">

    <yandex.com.mds.hw2.views.ColorPickerView
        android:conflictNotes="@+conflictNotes/color_picker_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <yandex.com.mds.hw2.views.colorView.ColorView
        android:conflictNotes="@+conflictNotes/color_view"
        android:layout_width="@dimen/result_color_size"
        android:layout_height="@dimen/result_color_size"
        android:layout_margin="50dp" />

    <Button
        android:conflictNotes="@+conflictNotes/pick_button"
...
